--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
           N. Kumar, S. Mann. IEEE ICST 2025. <em>Accepted</em>.
         </li>
       </ul>
+    </section>
 
     <!-- Projects Section -->
     <section id="projects">
