Adding Zenodo paer

--- a/index.html
+++ b/index.html
@@ -112,6 +112,21 @@
         </li>
       </ul>
 
+      <h3>Edited Volumes/Proceedings</h3>
+      <ul>
+        <li>
+          <strong>
+          <em>Proceedings of the 27th Annual Mersivity / Water-HCI Symposium (August 2025)</em></strong
+          ><br />
+          <em>Publication Chair</em>
+          <a
+            href="https://doi.org/10.5281/zenodo.16973160"
+            target="_blank"
+            >[Link]</a
+          >
+        </li>
+      </ul>
+
       <h3>Accepted / In Press</h3>
       <ul>
         <li>
@@ -119,7 +134,7 @@
             >GPU-Accelerated Chirplet Transform: Scalable Runtime Profiling and
             Analysis</strong
           ><br />
-          N. Kumar, S. Mann. IEEE ICST 2025. <em>Accepted</em>.
+          Submitted to IEEE International Conference on Sensing Technologies (ICST) 2025. <em>Accepted</em>.
         </li>
       </ul>
     </section>
