--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <!-- About Section -->
     <section id="about">
-      <h2>About</h2>
+      <h2>About Me</h2>
       <p>
         I am a Master’s researcher in Electrical and Computer Engineering at the
         University of Toronto, working under Dr. Steve Mann. My research focuses
