--- a/index.html
+++ b/index.html
@@ -14,20 +14,18 @@
     <!-- Header / Navbar -->
     <header>
       <h1>Nishant Kumar</h1>
-      <p>
-        Embedded & Biomedical Engineering — Neuroengineering, Wearables, Signal
-        Processing
-      </p>
-      <nav>
-        <a href="#about">About</a>
-        <a href="#publications">Publications</a>
-        <a href="#projects">Projects</a>
-        <a href="#contact">Contact</a>
-
-      </nav>
+      <p>Embedded & Biomedical Engineering — Neuroengineering, Wearables, Signal Processing</p>
     </header>
 
-            <!-- <a href="Nishant_Kumar_CV.pdf" target="_blank">CV</a> -->
+    <nav>
+      <a href="#about">About</a>
+      <a href="#publications">Publications</a>
+      <a href="#projects">Projects</a>
+      <a href="#contact">Contact</a>
+    </nav>
+
+
+    <!-- <a href="Nishant_Kumar_CV.pdf" target="_blank">CV</a> -->
 
     <!-- About Section -->
     <section id="about">
