--- a/index.html
+++ b/index.html
@@ -30,18 +30,17 @@
     <!-- About Section -->
     <section id="about">
       <h2>About Me</h2>
-      <p>
-        I am a Master’s researcher in Electrical and Computer Engineering at the
-        University of Toronto, working under Dr. Steve Mann. My research focuses
-        on neuroengineering systems that integrate signal processing, embedded
-        computing, and hardware acceleration, with applications in EEG analysis,
-        wearable sensing, and rehabilitation technologies.
-      </p>
-      <p>
-        My current work includes GPU-accelerated adaptive time–frequency
-        methods, embedded EEG data acquisition systems, and assistive robotics.
-      </p>
+      <section id="about">
+        <div class="about-container">
+          <img src="/images/nkheadshot.jpg" alt="Nishant Kumar" class="profile-photo">
+          <div class="about-text">
+            <p>I am a Master’s researcher in Electrical and Computer Engineering at the University of Toronto, working under Dr. Steve Mann. My research focuses on neuroengineering systems that integrate signal processing, embedded computing, and hardware acceleration, with applications in EEG analysis, wearable sensing, and rehabilitation technologies.</p>
+            <p>My current work includes GPU-accelerated adaptive time–frequency methods, embedded EEG data acquisition systems, and assistive robotics.</p>
+          </div>
+        </div>
+      </section>
     </section>
+
 
     <!-- Publications Section -->
     <section id="publications">
