Testing it once again

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <h2>About Me</h2>
       <section id="about">
           <div class="about-text">
-            <p>I am a Masters researcher in Electrical and Computer Engineering at the University of Toronto, working under Dr. Steve Mann. My research focuses on neuroengineering systems that integrate signal processing, embedded computing, and hardware acceleration, with applications in EEG analysis, wearable sensing, and rehabilitation technologies.</p>
+            <p>I am a Master's researcher in Electrical and Computer Engineering at the University of Toronto, working under Dr. Steve Mann. My research focuses on neuroengineering systems that integrate signal processing, embedded computing, and hardware acceleration, with applications in EEG analysis, wearable sensing, and rehabilitation technologies.</p>
             <p>My current work includes GPU-accelerated adaptive time–frequency methods, embedded EEG data acquisition systems, and assistive robotics.</p>
           </div>
         </div>
