Adding new info

--- a/index.html
+++ b/index.html
@@ -52,22 +52,22 @@
             Using the Muse S Headband</strong
           ><br />
           Published: IEEE International Conference on Control, Automation and
-          Diagnosis (ICCAD) 2025.
+          Diagnosis (ICCAD) 2025.<br />
           <a
             href="https://ieeexplore.ieee.org/abstract/document/11099439"
             target="_blank"
-            >[Link]</a
+            >View Publication</a
           >
         </li>
         <li>
           <strong
             >MoBorg: Mobility as Cyborg Prosthesis for "Being a Ball" </strong
           ><br />
-          Published: IEEE Games, Entertainment and Media (GEM) 2025.
+          Published: IEEE Games, Entertainment and Media (GEM) 2025.<br />
           <a
             href="https://ieeexplore.ieee.org/abstract/document/11155738"
             target="_blank"
-            >[Link]</a
+            >View Publication</a
           >
         </li>
         <li>
@@ -76,48 +76,59 @@
           ><br />
           Published: IEEE International Conference on Consumer Electronics
           (ICCE) 2025.
-          <em>Best Poster Paper Award</em>
+          <em>Best Poster Paper Award</em><br />
           <a
             href="https://ieeexplore.ieee.org/document/10929845"
             target="_blank"
-            >[Link]</a
+            >View Publication</a
           >
         </li>
         <li>
           <strong>Smart Rollator Walker for Enhanced Mobility</strong><br />
           Published: IEEE International Conference on Consumer Electronics
           (ICCE) 2025.
-          <em>Best Session Paper</em>
+          <em>Best Session Paper</em><br />
           <a
             href="https://ieeexplore.ieee.org/document/10930079/"
             target="_blank"
-            >[Link]</a
+            >View Publication</a
           >
         </li>
         <li>
           <strong>XR Waterball for Spinal Rehabilitation</strong></strong
           ><br />
           Published: Second International Workshop on Human-centered Sensing, Networking, and Multi-Device Systems (HumanSys), 2024.
-          
+          <br />
           <a
             href="http://wearcam.org/XRwaterball_for_spinal_rehab_3698388.3699623.pdf"
             target="_blank"
-            >[Link]</a
+            >View Publication</a
           >
         </li>
       </ul>
 
       <h3>Edited Volumes/Proceedings</h3>
       <ul>
+          <li>
+          <strong>
+          Proceedings of the 27th Annual Mersivity / Water-HCI Symposium December Edition</strong
+          ><br />
+          <em>Proceedings Chair</em><br />
+          <a
+            href="https://zenodo.org/records/18042961"
+            target="_blank"
+            >View Publication</a
+          >
+        </li>
         <li>
           <strong>
-          <em>Proceedings of the 27th Annual Mersivity / Water-HCI Symposium (August 2025)</em></strong
+          Proceedings of the 27th Annual Mersivity / Water-HCI Symposium (August 2025)</strong
           ><br />
-          <em>Publication Chair</em>
+          <em>Publication Chair</em><br />
           <a
             href="https://doi.org/10.5281/zenodo.16973160"
             target="_blank"
-            >[Link]</a
+            >View Publication</a
           >
         </li>
       </ul>
@@ -131,6 +142,14 @@
           ><br />
           Submitted to IEEE International Conference on Sensing Technologies (ICST) 2025. <em>Accepted</em>.
         </li>
+        <li>
+          <strong
+            >Adaptive Chirplet Transform-Based Neural Network for Seizure State Detection
+          </strong
+          ><br />
+          Submitted to IEEE International Conference on AI in Information and Communication (ICAIIC) 2025. <em>Accepted</em>.
+        </li>
+        
       </ul>
     </section>
 
@@ -182,6 +201,35 @@
       </div>
 
       <!-- Add more projects here -->
+    </section>
+
+    <!-- <section id="Image Gallery"> -->
+      <!-- <h2>Image Gallery</h2>
+      <div class="gallery">
+        <div class="full-size gallery">
+  <img src="image1.jpg" alt="Description of image 1">
+  <img src="image2.jpg" alt="Description of image 2">
+  <img src="image3.jpg" alt="Description of image 3"> --> 
+        <!-- </div>
+        <div class="full-size gallery">
+        <img src="image1.jpg" alt="Description of image 1">
+  <img src="image2.jpg" alt="Description of image 2">
+  <img src="image3.jpg" alt="Description of image 3">  
+        </div> -->
+  <!-- </section> -->
+
+      <section id="Awards">
+      <h2>Awards</h2>
+      <ul>
+        <li>
+          <strong>Best Poster Paper Award</strong><br />
+          IEEE International Conference on Consumer Electronics (ICCE) 2025
+        </li>
+        <li>
+          <strong>Best Session Paper</strong><br />
+          IEEE International Conference on Consumer Electronics (ICCE) 2025
+        </li>
+      </ul>
     </section>
 
     <!-- Contact Section -->
